<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/parchment"
        android:orientation="vertical"
        tools:context="com.example.android.harrypotterquizii.SecondQuestionsPageActivity">

        <!-- Question 5 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:text="@string/question_5"
            android:textSize="@dimen/question_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:text="@string/question5"
            android:textSize="@dimen/text_size" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <RadioButton
                android:id="@+id/correct_answer_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage5"
                android:text="@string/reg_cattermole" />

            <RadioButton
                android:id="@+id/incorrect_answer_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage5"
                android:text="@string/albert_runcorn" />

            <RadioButton
                android:id="@+id/incorrect_answer_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage5"
                android:text="@string/cornelius_fudge" />

        </RadioGroup>

        <!-- Question 6 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:layout_marginTop="8dp"
            android:text="@string/question_6"
            android:textSize="@dimen/question_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:text="@string/question6"
            android:textSize="@dimen/text_size" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <RadioButton
                android:id="@+id/incorrect_answer_eleven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage6"
                android:text="@string/rufus_scrimgeour" />

            <RadioButton
                android:id="@+id/incorrect_answer_twelve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage6"
                android:text="@string/professor_mcgonagall" />

            <RadioButton
                android:id="@+id/correct_answer_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage6"
                android:text="@string/bellatrix_lestrange" />

        </RadioGroup>

        <!-- Question 7 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:layout_marginTop="8dp"
            android:text="@string/question_7"
            android:textSize="@dimen/question_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:text="@string/question7"
            android:textSize="@dimen/text_size" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <RadioButton
                android:id="@+id/correct_answer_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage7"
                android:text="@string/igor_karkaroff_s" />

            <RadioButton
                android:id="@+id/incorrect_answer_thirteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage7"
                android:text="@string/alecto_carrow" />

            <RadioButton
                android:id="@+id/incorrect_answer_fourteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage7"
                android:text="@string/bellatrix_lestrange_death_eater" />

        </RadioGroup>

        <!--Question 8-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:layout_marginTop="8dp"
            android:text="Question 8"
            android:textSize="@dimen/question_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:text="@string/question8"
            android:textSize="@dimen/text_size" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <RadioButton
                android:id="@+id/incorrect_answer_fifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage8"
                android:text="@string/quirinus_quirrel" />

            <RadioButton
                android:id="@+id/incorrect_answer_sixteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage8"
                android:text="@string/severus_snape" />

            <RadioButton
                android:id="@+id/correct_answer_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toastMessage8"
                android:text="@string/gilderoy_lockheart" />

        </RadioGroup>

        <!--Enter Button-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/enter_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:onClick="third_question_page"
                android:text="@string/QuestionPage_One_Enter_Button"
                android:textSize="@dimen/button_text_size" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
