<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/parchment"
        tools:context="com.example.android.harrypotterquizii.FirstQuestionsPageActivity">





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:textSize="@dimen/question_text_size"
            android:text="@string/question_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:text="@string/Question_1"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <RadioButton
                android:id="@+id/correct_answer_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11_o_clock"
                android:onClick="toastMessage1"/>

            <RadioButton
                android:id="@+id/incorrect_answer_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9_o_clock"
                android:onClick="toastMessage1"/>

            <RadioButton
                android:id="@+id/incorrect_answer_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/midday"
                android:onClick="toastMessage1"/>

        </RadioGroup>

        <!--<CheckBox-->
            <!--android:id="@+id/correct_answer_one"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/_11_o_clock"-->
            <!--android:onClick="toastMessage1"/>-->

        <!--<CheckBox-->
            <!--android:id="@+id/incorrect_answer_one"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/_9_o_clock"-->
            <!--android:onClick="toastMessage1"/>-->

        <!--<CheckBox-->
            <!--android:id="@+id/incorrect_answer_two"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/midday"-->
            <!--android:onClick="toastMessage1"/>-->

        <!-- Question 2 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:textSize="@dimen/question_text_size"
            android:text="@string/question_2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:text="@string/question2"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <RadioButton
                android:id="@+id/incorrect_answer_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:onClick="toastMessage2"/>

            <RadioButton
                android:id="@+id/incorrect_answer_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:onClick="toastMessage2"/>

            <RadioButton
                android:id="@+id/correct_answer_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:onClick="toastMessage2"/>

        </RadioGroup>

        <!--<CheckBox-->
            <!--android:id="@+id/incorrect_answer_three"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/_2"-->
            <!--android:onClick="toastMessage2"/>-->

        <!--<CheckBox-->
            <!--android:id="@+id/incorrect_answer_four"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/_3"-->
            <!--android:onClick="toastMessage2"/>-->

        <!--<CheckBox-->
            <!--android:id="@+id/correct_answer_two"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/_1"-->
            <!--android:onClick="toastMessage2"/>-->

        <!-- Question 3 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:textStyle="bold"
            android:textSize="@dimen/question_text_size"
            android:text="@string/question_3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:text="@string/question3"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <RadioButton
                android:id="@+id/incorrect_answer_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dave"
                android:onClick="toastMessage3"/>

            <RadioButton
                android:id="@+id/incorrect_answer_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scabbers"
                android:onClick="toastMessage3"/>

            <RadioButton
                android:id="@+id/correct_answer_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/najini"
                android:onClick="toastMessage3"/>

        </RadioGroup>

        <!--<CheckBox-->
            <!--android:id="@+id/incorrect_answer_five"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/dave"-->
            <!--android:onClick="toastMessage3"/>-->

        <!--<CheckBox-->
            <!--android:id="@+id/incorrect_answer_six"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/scabbers"-->
            <!--android:onClick="toastMessage3"/>-->

        <!--<CheckBox-->
            <!--android:id="@+id/correct_answer_three"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/najini"-->
            <!--android:onClick="toastMessage3"/>-->

        <!-- Question 4 -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:textStyle="bold"
            android:textSize="@dimen/question_text_size"
            android:text="@string/question_4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="@dimen/text_view_checkbox_margin"
            android:text="@string/question4"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <RadioButton
                android:id="@+id/incorrect_answer_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:onClick="toastMessage4"/>

            <RadioButton
                android:id="@+id/correct_answer_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:onClick="toastMessage4"/>

            <RadioButton
                android:id="@+id/correct_answer_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:onClick="toastMessage4"/>

        </RadioGroup>


        <!--<CheckBox-->
            <!--android:id="@+id/incorrect_answer_seven"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/_4"-->
            <!--android:onClick="toastMessage4"/>-->

        <!--<CheckBox-->
            <!--android:id="@+id/correct_answer_four"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/_7"-->
            <!--android:onClick="toastMessage4"/>-->

        <!--<CheckBox-->
            <!--android:id="@+id/incorrect_answer_eight"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:layout_marginLeft="@dimen/text_view_checkbox_margin"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:text="@string/_10"-->
            <!--android:onClick="toastMessage4"/>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/enter_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/QuestionPage_One_Enter_Button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/button_text_size"
                android:onClick="second_question_page"/>
        </RelativeLayout>


    </LinearLayout>
</ScrollView>